Styles/about.css
@import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital@0;1&family=Lusitana:wght@400;700&display=swap');

:root   {
    --darkText: rgb(41, 47, 47);
}


body{
    position: relative;
    background-image: url("/Images/Wall-11.jpeg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;  
    background-size: cover;
    overflow: hidden;

    color: var(--darkText);
}

nav{
    padding: 10px 20px;
    display: flex;
    justify-content: space-between;
}

p   {
    font-family: 'Instrument Sans';
    font-size: 1.1em;
    max-width: 500px;
    line-height: 1.8em;

    opacity: 0;
    transform: scale(0.94);
    animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
    filter: blur(4px);
}

.about_content  {
    border-radius: 0px;
    background-blend-mode: darken;
    line-height: 26px;
    color: transparent;
    filter: blur(12px);
    opacity: 0;
    display: inline-block;
    transition: color 0.5s ease, filter 0.5s ease, opacity 0.5s ease;
    background: linear-gradient(90deg, rgba(255,255,255,0.1) 25%, rgba(0,0,0,0.1) 75%);
    background-size: 200% 200%;
    -webkit-mask-image: radial-gradient(circle, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
    -webkit-mask-size: cover;

}
.about_content.visible {
    color: #333;
    filter: blur(0);
    opacity: 1;
    background: none;
    -webkit-mask-image: radial-gradient(circle, rgba(0,0,0,1) 100%, rgba(0,0,0,0) 100%);
    -webkit-mask-size: cover;
}

.site_logo  {
    opacity: 0.8;
    padding: 8px 10px;
    height: 40px;
    width: auto;
    mix-blend-mode: darken;
    border: 0px solid white;
    transition-duration: 0.6s;
}.site_logo:hover   {
    opacity: 1;
    mix-blend-mode: color-burn;
    rotate: 20deg;
    transition-duration: 0.3s;
    transition: all 400ms cubic-bezier(.47,2.2,.41,.8);
}

.right_nav  {
    margin-top: -8px;
    display: flex;
    gap: 1em;
}

.nav_link   {
    font-family: 'Instrument Serif';
    display: flex;
    align-items: center;
    padding: 0px 10px;
    text-decoration: none;
    font-style: italic;
    font-size: 1.1em;
    letter-spacing: 0.02em;
    mix-blend-mode: multiply;
    color: #000000;
    border: 0px solid rgba(255, 255, 255, 0);
    transition-duration: 0.6s;
}.nav_link:hover    {
    border-bottom: 2px solid var(--darkText);
    transition-duration: 0.1s;
    margin-bottom: 5px;
}

.main    {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-top: -80px;
    z-index: -1;
    height: 60vh;
    position: relative;
    padding: 10% 25%;
    font-family: 'Instrument Sans';
}

a   {
    text-decoration: wavy;
    font-family: 'Instrument Sans';
    font-size: 1em;
    color: #ffffff;
    opacity: 0.7;
}

.button {
    text-decoration: none;
    border: none;
    border: 1px solid white;
    border-radius: 20px;
    padding: 10px 20px 10px 20px;
    transition: 0.6s;
    transform: scale(0.94);
    animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
    display: flex;
    align-items: center;
    text-align: center;
    opacity: 0;
    filter: blur(4px);
    height: 25px;
}

.button:hover  {
    margin-top: 2px;
    background-color: rgba(255, 255, 255, 0.213);
    transition: 0.3s;
    padding-bottom: 13px;
    box-shadow: 0px 5px whitesmoke;
    height: 20px;
}

form    {
    width: 90%;
    transform: scale(0.94);
    animation: scale 1.5s forwards cubic-bezier(0.5, 1, 0.89, 1);
}

label   {
    font-family: 'Instrument Serif';
    font-size: 1.2em;
    opacity: 0;
}

textarea    {
    height: 90px;
    width: 99%;
    display: block;
    outline: none;
    border: none;
    padding-top: 10px;
    padding-left: 0px;
    margin-right: 20px;
    font-family: 'Instrument Serif';
    font-style: italic;
    font-size: 1.2em;
    color: #1822af;
    border-bottom: 1.5px solid #969696;
    background-color: #ffffff00;
    transition: 0.6s;
    opacity: 0;
    border-radius: 0px;
    text-indent: 2.1px;
}textarea:focus {
    border-bottom: 1.5px solid var(--darkText);
    outline: none;
    transition: 0.3s;
}textarea::placeholder  {
    color: #969696;
}

input[type=text]::placeholder  {
    color: #969696;
}

input[type=text] {
    color: #1822af;
    box-sizing: border-box;
    font-family: 'Instrument Serif';
    font-style: italic;
    font-size: 1.2em;
    width: 100%;
    padding: 10px 3px;
    margin: 0px 0;
    border: none;
    border-bottom: 1.5px solid #969696;
    border-radius: 0px;
    background-color: #ffffff00;
    transition: 0.6s;
    opacity: 0;
    text-indent: 2.1px;

}

input[type=text]:focus {
    border-bottom: 1.5px solid var(--darkText);
    outline: none;
    transition: 0.3s;
}

input[type=submit]  {
    color: var(--darkText);
    width: 100%;
    font-weight: 400;
    padding: 10px 20px;
    height: 42px;
    background-color: #ffffff00;
    border: 1.5px solid black;
    font-family: 'Instrument Sans';
    font-size: 1em;
    border-radius: 17px;
    transition-duration: 0.3s;
    transition: 0.6s;
    opacity: 0;
    margin-top: 40px;
}

input[type=submit]:hover {
    margin-top: 42px;
    background-color: rgba(255, 255, 255, 0.213);
    box-shadow: 0px 5px var(--darkText);
    padding-top: 6px;
    height: 38px;
    transition: 0.3s;
}

h1 {
    font-family: 'Instrument Serif', serif;
    max-width: 25ch;
    font-size: 3em;
    line-height: 1.3em;
    font-weight: 400;
    margin-left: -5px;

    transform: scale(0.94);
    animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
}
  
@keyframes scale {
    100% {
      transform: scale(1);
    }
}

span {
    display: inline-block;
    opacity: 0;
    filter: blur(4px);
}

span:nth-child(1) {
    animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
}
  
span:nth-child(2) {
    animation: fade-in 0.8s 0.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
}
  
span:nth-child(3) {
    animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
}
  
span:nth-child(4) {
    animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
}
  
span:nth-child(5) {
    animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

.button:nth-child(1) {
    animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

p:nth-child(1)   {
    animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

label:nth-child(1)   {
    animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

input[type=text]:nth-child(2)   {
    animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

label:nth-child(6)   {
    animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

textarea:nth-child(7)   {
    animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

input[type=submit]:nth-child(8)   {
    animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

@keyframes fade-in {
    100% {
      opacity: 1;
      filter: blur(0);
    }
}

@media screen and (max-width: 600px)	{
	
	nav    {
        padding: 1%;
    }

    h1  {
        margin-left: 0px;
    }

    .main   {
        display: block;
        text-align: center;
        border: 0px solid red;
        padding: 1% 5%;
        margin-top: 0px;
    }
    .about_content  {
        text-align: left;
    }

    form    {
        width: 100%;
        display: flex;
        flex-direction: column;
        text-align: left;
    }

    input[type=text]    {
        width: 100%;
        padding: 5px 0px;
    }

    textarea    {
        width: 99%;
    }
	
}

@media screen and (max-width: 330px)	{

    body 	{
		overflow: scroll;
	}
    
    .right_nav  {
        display: flex;
        gap: 0.5em;
    }

    h1  {
        margin-left: -1px;
        text-align: left;
    }

    .about_content  {
        margin-top: -20px;
    }

    form    {
        margin-top: -20px;
    }

}

